// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadCrumb Component should render correctly with empty links 1`] = `
<div>
  <ul
    class="flex flex-wrap items-center"
  />
</div>
`;

exports[`BreadCrumb Component should render correctly with one link without arrow 1`] = `
<div>
  <ul
    class="flex flex-wrap items-center"
  >
    <li
      class="flex items-center"
    >
      <span
        class="flex items-center nj-crumb-font-size
					     font-normal capitalize text-gray-700"
      >
        <div>
          google
        </div>
      </span>
    </li>
  </ul>
</div>
`;

exports[`BreadCrumb Component should render correctly with two links with arrow 1`] = `
<div>
  <ul
    class="flex flex-wrap items-center"
  >
    <li
      class="flex items-center"
    >
      <span
        class="flex items-center nj-crumb-font-size font-normal capitalize nj-text-brand cursor-pointer"
      >
        <a />
      </span>
      <span
        class="mx-1.5 text-caption2 text-gray-700"
      >
        <div
          data-testid="arrow-right-icon"
        >
          ArrowRightIcon
        </div>
      </span>
    </li>
    <li
      class="flex items-center"
    >
      <span
        class="flex items-center nj-crumb-font-size
					     font-normal capitalize text-gray-700"
      >
        <div>
          youtube
        </div>
      </span>
    </li>
  </ul>
</div>
`;
